<resources>

    <string name="app_name">SimpleCrypto</string>

    <!-- main menu strings -->
    <string name="cryptography_messaging">Crypto Messaging</string>
    <string name="cryptography_writer">Crypto Writer</string>
    <string name="scheme_library">Scheme Library</string>
    <string name="saved_strings">Saved Strings</string>
    <string name="cryptography_lessons">Crypto Lessons</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>

    <string name="title_bar">
        <![CDATA[<font color="#7030a0">Simple</font><font color="#002060">Crypto</font>]]>
    </string>

    <!-- about strings -->
    <string name="about_content">About the app</string>
    <string name="send_feedback">Send Feedback</string>

    <!-- login strings -->
    <string name="login">Please Sign In</string>
    <string name="logging_in">Signing In . . .</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_with_google">Sign in with Google</string>
    <string name="invalid_email">This email address is invalid</string>
    <string name="invalid_password">Password is too short</string>
    <string name="incorrect_password">Password is incorrect</string>
    <string name="field_required">This field is required</string>
    <string name="login_error">Login Error!</string>

    <!-- create account strings -->
    <string name="create_account">Create an Account</string>
    <string name="create">Create</string>
    <string name="prompt_first_name">First</string>
    <string name="prompt_last_name">Last</string>
    <string name="prompt_username">Username</string>
    <string name="action_create_account">Create Account</string>
    <string name="create_account_error">Error creating account!</string>

    <string name="logout">Logout</string>

    <!-- crypto writer strings -->
    <string name="writer_title">Writer</string>
    <string name="insert_text_here">Insert text here</string>
    <string name="output_text">Output</string>
    <string name="store_text">Store Text</string>
    <string name="toggle_button_encrypt">Encrypt</string>
    <string name="toggle_button_decrypt">Decrypt</string>
    <string name="run_cipher_button">Run Cipher</string>

    <!-- lessons Strings-->
    <string name="caesar_cipher_lesson">Caesar Lessons</string>
    <string name="vigenere_lessons">Vigenere Lessons</string>
    <string name="affine_lessons">Affine Lessons</string>
    <string name="rsa_lessons">RSA Lessons</string>
    <string name="mod_arith_lessons">Modular Arithmetic Lessons</string>
    <string name="inverse_lessons">Inverse Lessons</string>
    <string name="one_time_pad_cipher">One Time Pad Cipher</string>

    <!-- scheme library strings -->
    <string name="choose_cipher">Choose a Cipher:</string>
    <string name="choose_prompt">Choose…</string>
    <string name="key1_prompt_caesar">Please enter a shift amount:</string>
    <string name="key1_prompt_affine">Please enter a value for alpha:</string>
    <string name="key2_prompt_affine">Please enter a value for beta:</string>
    <string name="key1_prompt_vigenere">Please enter an encryption string</string>
    <string name="create_scheme_name_hint">Enter a name</string>
    <string name="delete_scheme_warning">Warning!!!</string>
    <string name="delete_scheme_warning_message">Strings using this scheme will be deleted. Are you sure you want to continue?</string>
    <string name="choose_alphabet">Choose an Alphabet:</string>

    <!-- Settings String -->
    <string name="change_user_name">Change User Info</string>
    <string name="change_profile_picture">Change Profile Picture</string>
    <string name="profile_picture_title">Profile Picture</string>
    <string name="picture_link_enter">Enter Picture Link</string>
    <string name="picture_link_invalid">Picture does not end in correct file type!!! JPG and PNG are only accepted.</string>
    <string name="image_not_saved">Not valid image. Image not saved to profile. Try again</string>
    <string name="picture_url_tag">PICTURE_URL</string>

    <!-- Change names dialog -->
    <string name="first_name">First Name:</string>
    <string name="enter_f_name">Enter First Name</string>
    <string name="last_name">Last Name:</string>
    <string name="enter_l_name">Enter Last Name</string>
    <string name="user_name">Username:</string>
    <string name="enter_uname">Enter Username</string>

    <!-- crypto messaging strings -->
    <string name="new_conversation">New</string>
    <string name="enter_message_hint">Enter message</string>
    <string name="send_message">Send</string>
    <string name="enter_username_hint">Enter username</string>
    <string name="invalid_user_selected">You did not select a valid user!</string>
    <string name="profile_pic">profile pic</string>
    <string name="message_notification">%1$d</string>

    <string-array name="cipher_options">
        <item>Caesar</item>
        <item>Affine</item>
        <item>Vigenere</item>
    </string-array>

    <string-array name="alphabet_options">
        <item>Basic</item>
        <item>Extended</item>
    </string-array>

</resources>
