<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <AutoCompleteTextView
        android:id="@+id/other_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:completionThreshold="2"
        android:hint="@string/enter_username_hint" />

    <Spinner
        android:id="@+id/new_message_scheme_drop_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/other_user"
        android:layout_margin="10dp"
        android:prompt="@string/choose_prompt"
        android:spinnerMode="dropdown" />

    <EditText
        android:id="@+id/initial_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/new_message_scheme_drop_down"
        android:layout_margin="10dp"
        android:hint="@string/enter_message_hint" />

</RelativeLayout>
