<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.rosehulman.pughck.simplecrypto.fragments.CreateAccountFragment">

    <AutoCompleteTextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/prompt_email"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:shadowColor="@android:color/black"
        android:singleLine="true"
        android:textColor="@android:color/black"
        android:textColorHighlight="@android:color/darker_gray"
        android:textColorHint="@android:color/darker_gray"
        android:textColorLink="@android:color/darker_gray" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:shadowColor="@android:color/black"
        android:singleLine="true"
        android:textColor="@android:color/black"
        android:textColorHighlight="@android:color/darker_gray"
        android:textColorHint="@android:color/darker_gray"
        android:textColorLink="@android:color/darker_gray" />

    <!-- TODO add more stuff for user model info -->

</FrameLayout>
