<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"

                tools:context="edu.rosehulman.pughck.simplecrypto.fragments.AboutFragment">
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_bar_about"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:layout_toRightOf="@+id/side_bar"
        android:layout_toEndOf="@+id/side_bar"
        android:layout_alignRight="@+id/title_bar_about"
        android:background="@drawable/stroke_bg"
        android:layout_alignEnd="@+id/title_bar_about"
        android:layout_marginBottom="10dp"
        android:layout_above="@+id/send_feedback_button">
        <TextView
            android:layout_margin="5dp"
            android:id="@+id/about_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_content"/>

    </ScrollView>


    <TextView
        android:id="@+id/title_bar_about"
        style="@style/TitleBarBanners"
        android:text="@string/about"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/side_bar"
        android:layout_toEndOf="@+id/side_bar"/>

    <View
        android:layout_width="10dp"
        android:layout_height="match_parent"
        android:background="@drawable/side_bar"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/side_bar"/>

    <Button
        android:id="@+id/send_feedback_button"
        android:background="@drawable/round_corners_button_white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/send_feedback"/>

</RelativeLayout>
